Fix two scrollbar issue.

--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -37,15 +37,14 @@ $lightgrey:#9e9e9e;
 $red:#e55555;
 /* GENERAL */
 
-
-
 html, body {
     // height: 100%;
     width: 100%;
 
-    overflow-x: hidden;
+    // overflow-x: auto;
     letter-spacing: .3px;
 }
+
 body {
   color: $black;
   position: relative;
@@ -57,6 +56,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -moz-font-feature-settings: "liga" on;
+  .no-scroll {
+    overflow-y: hidden !important;
+  }
 }
 /* Forms */
 
@@ -428,7 +430,7 @@ img.avatar {
         left: 50%;
         top: 0;
         margin-left: -45px;
-        margin-top: 115px;
+        margin-top: 75px;
         img {
           margin-right: $gutter/4;
           width: 90px;
